--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,19 @@
 
 body {
   margin: 0;
+  padding: 0 1rem;
   font-family: "Pretendard";
+}
+
+section {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+input {
+  border: 1px solid rgb(197, 195, 195);
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
 }
