--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,9 @@ input {
   border-radius: 5px;
   padding: 0.5rem 1rem;
 }
+
+::-webkit-scrollbar {
+  overflow: scroll;
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
