--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,8 @@ ul {
 .react-calendar__navigation__label__labelText--from {
   font-size: 1.2rem;
   font-weight: 500;
+  padding-bottom: 0.3rem;
+  border-bottom: 1px solid black;
 }
 
 .react-calendar__month-view__days__day--neighboringMonth {
